# pegasus

./: CMakeLists.txt
core/: ActionTags.cpp  AtlasInst.hpp  AtlasState.cpp  AtlasState.hpp  CMakeLists.txt  Fetch.cpp  Fetch.hpp  PegasusCore.cpp  PegasusInst.hpp  PegasusState.cpp  PegasusState.hpp
core/translate/: AtlasTranslationState.hpp  ExecutionCache.cpp  ExecutionCache.hpp  ExecutionPage.cpp  ExecutionPage.hpp  PegasusTranslationState.hpp  Translate.cpp  Translate.hpp  TranslateTypes.hpp  TranslatedPage.cpp  TranslatedPage.hpp
cosim/: AtlasCoSim.cpp  PegasusCoSim.cpp
doc/: ExecutionPage.drawio
include/: ActionTags.hpp  AtlasTypes.hpp  PegasusTranslateTypes.hpp  PegasusTypes.hpp
sim/: PegasusSim.cpp
test/: CMakeLists.txt
test/block_execute/: BlockExecute_test.cpp  CMakeLists.txt
test/core/translate/: Translate_test.cpp
test/elfs/asm/: GNUmakefile
test/sim/: InstructionTester.hpp
